test/spec_vectors/local_set/fail/module_5.wat
(module (func $type-param-arg-void-vs-num (param i32) (local.set 0 (nop))))